fix text area overlapping and button appearance

--- a/app/assets/stylesheets/components/notes.scss
+++ b/app/assets/stylesheets/components/notes.scss
@@ -50,6 +50,7 @@
 
   h1 {
     font-weight: bold;
+    font-size: 18px;
     color: #4a4a4a;
     width: 270px;
     text-overflow: ellipsis;
@@ -58,7 +59,7 @@
   }
 
   span {
-    font-size: 14px;
+    font-size: 12px;
     letter-spacing: 1px;
   }
 
