--- a/app/assets/stylesheets/components/quill.snow.css
+++ b/app/assets/stylesheets/components/quill.snow.css
@@ -7,10 +7,11 @@
 .ql-container {
   box-sizing: border-box;
   font-family: Helvetica, Arial, sans-serif;
-  font-size: 13px;
+  font-size: 16px;
   height: 100%;
   margin: 0px;
   position: relative;
+  overflow: auto;
 }
 .ql-container.ql-disabled .ql-tooltip {
   visibility: hidden;
