--- a/app/assets/stylesheets/components/text_editor.scss
+++ b/app/assets/stylesheets/components/text_editor.scss
@@ -1,5 +1,6 @@
 .text-editor {
   width: 100%;
+  height: 100%;
   display: flex;
   flex-direction: column;
   box-sizing: border-box;
